implement challenge overview for items, Champions and Skin specific challenges with search functionality similar to autochecklist but not changeable
added search function to challenge overview table
